--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "astuteo/pardot-map",
     "description": "Intended for Astuteo client's use. A simple helper for client forms to push data to Pardot.",
     "type": "craft-plugin",
-    "version": "1.0.2",
+    "version": "1.1.0",
     "keywords": [
         "craft",
         "cms",
@@ -22,7 +22,8 @@
         }
     ],
     "require": {
-        "craftcms/cms": "^3.0.0-RC1"
+        "craftcms/cms": "^3.5.0",
+        "solspace/craft-freeform": "^3.6.0"
     },
     "autoload": {
         "psr-4": {
